브랜치 추가

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
-	<header>
-	<body></body>
-	</header>
+	<head>
+	    <title>GIT 수업</title>
+	</head>
+	<body>
+	    <header>
+		<h1>Git</h1>
+	    </header>
+	    <ul>
+		<li>Git 소개</li>
+		<li>버전</li>
+		<li></li>
+	    </ul>
+	</body>
 </html>
